--- a/src/containers/HomePage/HomeHeader.scss
+++ b/src/containers/HomePage/HomeHeader.scss
@@ -16,8 +16,8 @@
 
             .header-logo {
                 background : url('../../assets/bookingcare-2020.svg') center center no-repeat;
-                height     : 100%;
-                width      : 65%;
+                height     : 70%;
+                width      : 70%;
                 cursor     : pointer;
                 margin-left: 12px;
             }
@@ -39,6 +39,7 @@
                 .subs-title {
                     font-weight: 400;
                     font-size  : 12px;
+                    cursor     : pointer;
                 }
             }
         }
@@ -51,6 +52,7 @@
 
             .support {
                 margin-right: 25px;
+                cursor      : pointer;
             }
         }
     }
@@ -123,7 +125,7 @@
         .options {
             text-align     : center;
             display        : flex;
-            gap            : 50px;
+            gap            : 40px;
             justify-content: center;
 
 
@@ -153,6 +155,20 @@
 
                 .f {
                     background: url(../../assets/6.png) no-repeat;
+                }
+
+                .g {
+                    background: url(../../assets/7.jpg) no-repeat;
+                }
+
+                .h {
+                    background: url(../../assets/8.png) no-repeat;
+
+                }
+
+                .j {
+                    background: url(../../assets/9.png) no-repeat;
+
                 }
 
                 .img-child {
