--- a/src/containers/HomePage/HomePage.scss
+++ b/src/containers/HomePage/HomePage.scss
@@ -31,7 +31,7 @@
 }
 
 .section-share {
-    &.section-specialty {
+    &.section-medical-facility {
         background: #f5f5f5;
     }
 
@@ -47,30 +47,102 @@
 
     .section-body {
         .section-customize {
-            margin-left: 12px;
+            margin-left: 8px;
+            font-size  : 16px;
+
+            &:hover {
+                color: rgb(83, 226, 233);
+            }
 
             .bg-img {
-                width: 300px;
-                ;
+                width              : 300px;
                 height             : 180px;
-                // margin-left: 12px;
                 background-position: center center;
                 background-repeat  : no-repeat !important;
                 background-size    : cover;
                 background-color   : #eee;
+                cursor             : pointer;
+                gap                : 4px;
 
-                &.section-specialty {
-                    background: url("../../assets/images/specialty/1.jpg");
-                    width     : 300px;
+
+                &.section-specialty1 {
+                    background    : url("../../assets/images/specialty/1.jpg");
+                    // margin-left: 12px;
+
                 }
 
-                &.section-medical-facility {
+                &.section-specialty2 {
+                    background    : url("../../assets/images/specialty/2.jpg");
+                    // margin-left: 12px;
+
+                }
+
+                &.section-specialty3 {
+                    background    : url("../../assets/images/specialty/3.jpg");
+                    // margin-left: 12px;
+
+                }
+
+                &.section-specialty4 {
+                    background    : url("../../assets/images/specialty/4.jpg");
+                    // margin-left: 12px;
+
+                }
+
+                &.section-specialty5 {
+                    background    : url("../../assets/images/specialty/5.jpg");
+                    // margin-left: 12px;
+
+                }
+
+                &.section-specialty6 {
+                    background    : url("../../assets/images/specialty/6.jpg");
+                    // margin-left: 12px;
+
+                }
+
+                &.section-specialty7 {
+                    background    : url("../../assets/images/specialty/7.jpg");
+                    // margin-left: 12px;
+
+                }
+
+                &.section-specialty8 {
+                    background    : url("../../assets/images/specialty/8.jpg");
+                    // margin-left: 12px;
+
+                }
+
+                &.section-specialty9 {
+                    background    : url("../../assets/images/specialty/9.jpg");
+                    // margin-left: 12px;
+
+                }
+
+
+
+                &.section-medical-facility1 {
                     background         : url("../../assets/images/MedicalFacility/1.jpg");
                     background-size    : contain;
                     background-position: 20px;
-                    border             : 1px solid red;
+                }
 
+                &.section-medical-facility3 {
+                    background         : url("../../assets/images/MedicalFacility/3.jpg");
+                    background-size    : contain;
+                    background-position: 20px;
+                }
 
+                &.section-medical-facility5 {
+                    background         : url("../../assets/images/MedicalFacility/5.jpg");
+                    background-size    : contain;
+                    background-position: 20px;
+                }
+
+                &.section-medical-facility7 {
+                    background         : url("../../assets/images/MedicalFacility/7.jpg");
+                    background-size    : contain;
+                    background-position: 20px;
                 }
 
                 &.section-outstanding-doctor {
@@ -199,7 +271,8 @@
                 .content2 {
                     background       : url("../../assets/images/About/2.png");
                     background-repeat: no-repeat;
-                    height           : 100%;width : 100%;
+                    height           : 100%;
+                    width            : 100%;
                 }
 
                 .content3 {
