--- a/src/containers/HomePage/HomePage.scss
+++ b/src/containers/HomePage/HomePage.scss
@@ -150,6 +150,7 @@
                     width        : 120px;
                     height       : 120px;
                     border-radius: 50%;
+                    border       : 1px solid red($color: #000000);
                 }
 
                 &.section-handbook {
