--- a/src/containers/HomePage/HomePage.scss
+++ b/src/containers/HomePage/HomePage.scss
@@ -146,6 +146,7 @@
                 }
 
                 &.section-outstanding-doctor {
+                    // background-image: url("../../assets/images/OutstandingDoctor/bs1.jpg");  
                     margin-left  : -12px;
                     width        : 120px;
                     height       : 120px;
