--- a/src/containers/HomePage/Section/OutstandingDoctor.scss
+++ b/src/containers/HomePage/Section/OutstandingDoctor.scss
@@ -1,29 +1,29 @@
-.img1 {
-    background         : url("../../../assets/images/OutstandingDoctor/bs1.jpg");
-    background-position: center;
-}
+// .img1 {
+    //     background         : url("../../../assets/images/OutstandingDoctor/bs1.jpg");
+    //     background-position: center;
+    // }
 
-.img2 {
-    background         : url("../../../assets/images/OutstandingDoctor/bs2.jpg");
-    background-position: center;
-}
+    // .img2 {
+    //     background         : url("../../../assets/images/OutstandingDoctor/bs2.jpg");
+    //     background-position: center;
+    // }
 
-.img3 {
-    background         : url("../../../assets/images/OutstandingDoctor/bs3.jpg");
-    background-position: center;
-}
+    // .img3 {
+    //     background         : url("../../../assets/images/OutstandingDoctor/bs3.jpg");
+    //     background-position: center;
+    // }
 
-.img4 {
-    background         : url("../../../assets/images/OutstandingDoctor/bs4.jpg");
-    background-position: center;
-}
+    // .img4 {
+    //     background         : url("../../../assets/images/OutstandingDoctor/bs4.jpg");
+    //     background-position: center;
+    // }
 
-.img5 {
-    background         : url("../../../assets/images/OutstandingDoctor/bs5.jpg");
-    background-position: center;
-}
+    // .img5 {
+    //     background         : url("../../../assets/images/OutstandingDoctor/bs5.jpg");
+    //     background-position: center;
+    // }
 
-.img6 {
-    background         : url("../../../assets/images/OutstandingDoctor/bs6.jpg");
-    background-position: center;
-}
+    // .img6 {
+    //     background         : url("../../../assets/images/OutstandingDoctor/bs6.jpg");
+    //     background-position: center;
+    // }
