--- a/src/containers/System/Doctor/ManageSchedule.scss
+++ b/src/containers/System/Doctor/ManageSchedule.scss
@@ -23,6 +23,12 @@
         }
     }
 
+    .btn-schedule {
+        &.active {
+            background-color: orange;
+        }
+    }
+
     .btn-save-schedule {
         margin-top: 20px;
     }
