--- a/src/containers/HomePage/HomePage.scss
+++ b/src/containers/HomePage/HomePage.scss
@@ -206,6 +206,7 @@
 
     .section-customize {
         padding: 5px;
+        cursor : pointer;
 
         .customzie-border {
             border : 1px solid orange;
