--- a/src/containers/Auth/Login.scss
+++ b/src/containers/Auth/Login.scss
@@ -1,86 +1,105 @@
-.login-background{
-    height: 100vh;
-    background: linear-gradient(135deg, rgba(34,193,195,1) 0%,     rgba(253,187,45,1) 100%);
+.login-background {
+    height    : 100vh;
+    background: linear-gradient(135deg, rgba(34, 193, 195, 1) 0%, rgba(253, 187, 45, 1) 100%);
 
-    .login-container{
-        position: absolute;
-        width: 400px;
-        height: 450px;
-        margin:  auto;
+    .login-container {
+        position        : absolute;
+        width           : 400px;
+        height          : 450px;
+        margin          : auto;
         background-color: white;
-        border-radius: 10px;
-        top: 0;
-        bottom: 0;
-        right: 0;
-        left: 0;
+        border-radius   : 10px;
+        top             : 0;
+        bottom          : 0;
+        right           : 0;
+        left            : 0;
 
-        .login-content{
+        .login-content {
             padding: 10px;
 
-            .text-login{
-                text-align: center;
-                font-size: 24px;
+            .text-login {
+                text-align : center;
+                font-size  : 24px;
                 font-weight: 600;
                 padding-top: 10px;
             }
-            .login-input{
+
+            .login-input {
                 margin: 7px 0;
 
-                .custome-input-password{
+                .custome-input-password {
                     position: relative;
-                    i{
+
+                    i {
                         position: absolute;
-                        right: 0;
-                        top: 10px;
-                        right: 15px;
-                        cursor: pointer;
+                        right   : 0;
+                        top     : 10px;
+                        right   : 15px;
+                        cursor  : pointer;
                     }
                 }
             }
 
-            .btn-login{
-                width: 100%;
-                margin: 10px 0;
-                height: 30px;
+            .btn-login {
+                width        : 100%;
+                margin       : 10px 0;
+                height       : 30px;
                 border-radius: 15px;
-                border: none;
-                outline: none;
-                background: linear-gradient(135deg, rgba(34,193,195,1) 0%,     rgba(253,187,45,1) 100%);
-                color: white;
-                font-size: 16px;
-            }
-            .forgot-password{
-                font-size: 12px;
+                border       : none;
+                outline      : none;
+                background   : linear-gradient(135deg, rgba(34, 193, 195, 1) 0%, rgba(253, 187, 45, 1) 100%);
+                color        : white;
+                font-size    : 16px;
             }
 
-            .social-login{
-                display: flex;
+            .social-login {
+                display        : flex;
                 justify-content: center;
-                margin-top: 10px;
-                .google{
-                    font-size: 30px;
+                margin-top     : 10px;
+
+                .google {
+                    font-size       : 30px;
                     background-color: red;
-                    color: white;
-                    display: flex;
-                    border-radius: 50%;
-                    height: 50px;
-                    width: 50px;
-                    align-items: center;
-                    justify-content: center;
-                    margin-right: 10px;
+                    color           : white;
+                    display         : flex;
+                    border-radius   : 50%;
+                    height          : 50px;
+                    width           : 50px;
+                    align-items     : center;
+                    justify-content : center;
+                    margin-right    : 10px;
                 }
-                .facebook{
-                    font-size: 30px;
+
+                .facebook {
+                    font-size       : 30px;
                     background-color: blue;
-                    color: white;
-                    display: flex;
-                    border-radius: 50%;
-                    height: 50px;
-                    width: 50px;
-                    align-items: center;
-                    justify-content: center;
+                    color           : white;
+                    display         : flex;
+                    border-radius   : 50%;
+                    height          : 50px;
+                    width           : 50px;
+                    align-items     : center;
+                    justify-content : center;
                 }
             }
+
         }
-}
+
+        .action {
+            display      : flex;
+            margin-top   : 14px;
+            margin-bottom: 14px;
+            font-size    : 14px;
+            padding      : 0 4px;
+
+            .sign-up-link {
+                position: relative;
+                left    : 10%;
+
+            }
+        }
+
+
+    }
+
 }
