--- a/src/containers/HomePage/HomeHeader.scss
+++ b/src/containers/HomePage/HomeHeader.scss
@@ -34,6 +34,7 @@
             display        : flex;
             justify-content: space-between;
             align-items    : center;
+            cursor         : pointer;
 
             .child-content {
                 .subs-title {
