--- a/src/containers/Patient/Doctor/DetailDoctor.scss
+++ b/src/containers/Patient/Doctor/DetailDoctor.scss
@@ -31,4 +31,19 @@
             }
         }
     }
+
+    .schedule-doctor {
+        margin : 0 100px;
+        display: flex;
+        height : 200px;
+        border : 2px solid red;
+
+        .content-left {
+            width: 50%;
+        }
+
+        .content-right {
+            width: 50%;
+        }
+    }
 }
