--- a/src/containers/System/Admin/UserRedux.scss
+++ b/src/containers/System/Admin/UserRedux.scss
@@ -10,6 +10,10 @@
         }
     }
 
+    .label-upload {
+        margin-top: 12px;
+    }
+
     .preview-image {
         height         : 50px;
         width          : 100%;
