--- a/src/containers/System/Admin/ManageDoctor.scss
+++ b/src/containers/System/Admin/ManageDoctor.scss
@@ -24,6 +24,10 @@
         }
     }
 
+    .save-content-doctor {
+        background-color: yellow;
+    }
+
     .more-infor {
         display       : flex;
         gap           : 15px;
