--- a/src/containers/Patient/Doctor/DetailDoctor.scss
+++ b/src/containers/Patient/Doctor/DetailDoctor.scss
@@ -7,15 +7,18 @@
         display: flex;
 
         .content-left {
-            width        : 20%;
-            background   : center center no-repeat;
-            width        : 120px;
-            // height: 120px;
-            border-radius: 50%;
-            margin       : 12px 20px;
+            width          : 20%;
+            background     : center center no-repeat;
+            background-size: contain;
+            width          : 120px;
+            height         : 120px;
+            border-radius  : 50%;
+            margin         : 12px 20px;
+            border         : 2px solid red;
         }
 
         .content-right {
+            margin-left   : 12px;
             width         : 80%;
             display       : flex;
             flex-direction: column;
@@ -30,6 +33,21 @@
                 padding-top: 10px;
             }
         }
+    }
+
+    .detail-infor-doctor {
+        border-top      : 1px solid #ddd;
+        border-bottom   : 1px solid #ddd;
+        background-color: #f9f9f9;
+        padding         : 10px 100px;
+
+        h3 {
+            font-size: 17px;
+        }
+    }
+
+    .comment-doctor {
+        height: 50px;
     }
 
     .schedule-doctor {
